--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,7 @@
     <string name="permission_rationale">"Contacts permissions are needed for providing email
         completions."
     </string>
+    <string name="title_today">Today</string>
+    <string name="title_stats">Stats</string>
+    <string name="title_settings">Settings</string>
 </resources>
